# forque

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
cmake/: ClangTidy.cmake  CppCheck.cmake  Install.cmake  forqueConfig.cmake
sample/: CMakeLists.txt  app.cpp  pool.cpp  pool.hpp
src/: CMakeLists.txt  mutex.cpp
src/app/: app.cpp  pool.cpp  pool.hpp
src/inc/: forque.hpp  key.hpp  mutex.hpp  runque.hpp  sdefs.hpp  sink.hpp  sync_wait.hpp  tag.hpp  tag_stream.hpp  task.hpp  utility.hpp
src/test/: counted.hpp  forque_tests.cpp  key_tests.cpp  runque_tests.cpp  sink_queue_tests.cpp  sync_wait_tests.cpp  tag_tests.cpp  task_tests.cpp
test/: CMakeLists.txt  forque_tests.cpp  mutex_tests.cpp  runque_tests.cpp  sync_wait_tests.cpp  tag_tests.cpp  task_tests.cpp
vs/: forque.sln  forque.vcxproj  forque.vcxproj.filters
vs/tests/: app.vcxproj  app.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
